Fix number not showing and initial number of sidebar tabs

--- a/src/screens/Home/Tabs/Workspaces/workspacesStyles.css
+++ b/src/screens/Home/Tabs/Workspaces/workspacesStyles.css
@@ -41,7 +41,7 @@ tr:hover {
     transition: opacity 0.5s ease;
   }
 }
-.name {
+.descriptionBar .name {
   max-width: 600px;
   min-width: 450px;
 }
